@@ -266,6 +266,9 @@ struct instance_flags {
 	boolean lan_mail;	/* mail is initialized */
 	boolean lan_mail_fetched; /* mail is awaiting display */
 #endif
+#ifdef SORTLOOT
+	char sortloot;		/* sort items to loot alphabetically */
+#endif
 #ifdef SHOW_BORN
 	boolean show_born;	/* show numbers of created monsters */
 #endif
